--- a/clients/cobol-lsp-vscode-extension/package.json
+++ b/clients/cobol-lsp-vscode-extension/package.json
@@ -31,7 +31,7 @@
     ],
     "activationEvents": [
         "onLanguage:COBOL",
-        "onLanguage:COBOL Copybook",
+        "onLanguage:COBOL-Copybook",
         "workspaceContains:/.c4z"
     ],
     "icon": "resources/logo.png",
@@ -69,7 +69,7 @@
                 ]
             },
             {
-                "id": "COBOL Copybook",
+                "id": "COBOL-Copybook",
                 "extensions": [
                     ".cpy"
                 ]
@@ -86,7 +86,7 @@
                 }
             },
             {
-                "language": "COBOL Copybook",
+                "language": "COBOL-Copybook",
                 "scopeName": "source.cobol",
                 "path": "./syntaxes/COBOL.tmLanguage.json",
                 "embeddedLanguages": {
@@ -101,7 +101,7 @@
                 "path": "./snippets.json"
             },
             {
-                "language": "COBOL Copybook",
+                "language": "COBOL-Copybook",
                 "path": "./snippets.json"
             }
         ],
